# creators-file-manager

./: .gitignore  Agents.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cf-compress-engine/: Cargo.toml
src-tauri/cf-compress-engine/src/: codec.rs  main.rs  protocol.rs
src-tauri/src/: compress.rs  delete.rs  error.rs  exif_offset.rs  file_collect.rs  flatten.rs  fs_atomic.rs  lib.rs  main.rs  metadata_strip.rs  model.rs  path_norm.rs  rename.rs  resize.rs  settings.rs  worker_bridge.rs
