[package]
name = "file-manager"
version = "0.1.0"
description = "Creator's file operations app"
authors = ["ponpaku"]
edition = "2021"

[lib]
name = "file_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
kamadak-exif = "0.6"
image = { version = "0.25", default-features = true, features = ["jpeg", "png", "webp", "gif", "tiff", "bmp"] }
once_cell = "1"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
thiserror = "1"
trash = "5"
walkdir = "2"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
